--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,15 +1,15 @@
 ---
-import '~/assets/styles/base.css';
+import '~/assets/styles/base.scss';
 import Scripts from '~/components/core/Scripts.astro';
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="motion-safe:scroll-smooth 2xl:text-[20px]">
+<html lang="en" class="motion-safe:scroll-smooth 2xl:text-5">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
-	<body class="antialiased text-gray-900 dark:text-sw-primary-300 tracking-tight bg-white dark:bg-sw-primary-900">
+	<body class="antialiased bg-sw-secondary dark:bg-sw-primary text-sw-primary dark:text-sw-secondary">
 		<slot />
 		<style is:global>
 
