--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -1,72 +1,39 @@
 ---
 import { Icon } from 'astro-icon';
-import ToggleTheme from '~/components/core/ToggleTheme.astro';
-import ToggleMenu from '~/components/core/ToggleMenu.astro';
+import ToggleTheme from '~/components/core/ButtonToggleTheme.astro';
+import ToggleMenu from '~/components/core/ButtonToggleMenu.astro';
 ---
 
 <header
-	class="sticky top-0 z-40 flex-none mx-auto w-full bg-white md:bg-white dark:bg-sw-primary-900 dark:md:bg-sw-primary-900 md:backdrop-blur-sm border-b dark:border-b-0"
+	class="sticky top-0 z-40 flex-none mx-auto w-full md:backdrop-blur-sm border-b dark:border-b-0"
 >
-	<div class="py-3 px-3 mx-auto w-full md:flex md:justify-between max-w-6xl md:px-4">
+	<div class="w-full md:flex md:justify-between max-w-6xl align-middle">
 		<div class="flex justify-between">
-			<div>a</div>
+			<div class="flex flex-col md:flex-row md:self-center">spacewiz.dev</div>
 			<div class="flex items-center md:hidden">
 				<ToggleTheme />
 				<ToggleMenu />
 			</div>
 		</div>
 		<nav
-			class="items-center w-full md:w-auto hidden md:flex text-gray-600 dark:text-sw-primary-200 h-screen md:h-auto"
+			class="items-center w-full md:w-auto hidden md:flex text-secondary h-screen md:h-auto"
 			aria-label="Main navigation"
 			id="menu"
 		>
 			<ul
-				class="flex flex-col pt-8 md:pt-0 md:flex-row md:self-center collapse w-full md:w-auto collapsed text-xl md:text-base"
+				class="flex flex-col md:flex-row md:self-center collapse w-full md:w-auto collapsed text-xl md:text-base"
 			>
 				<li>
 					<a
-						class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
-						href="#">Pages</a
+						class="font-medium flex items-center transition duration-150 ease-in-out"
+						href="#">Menu link</a
 					>
-				</li>
-				<li>
-					<a
-						class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
-						href='#'
-						>Resources
-					</a>
-				</li>
-				<li>
-					<a
-						class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
-						href='#'>Blog</a
-					>
-				</li>
-				<li class="md:hidden">
-					<a
-						class="font-bold hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
-						href="https://github.com/onwidget/astrowind"
-						>Github
-					</a>
 				</li>
 			</ul>
-			<div class="md:self-center flex items-center mb-4 md:mb-0 ml-2">
+			<div class="md:self-center flex items-center mb-4 md:mb-0">
 				<div class="hidden items-center md:flex">
 					<ToggleTheme iconClass="w-5 h-5" />
-					<a
-						class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center"
-						aria-label="RSS Feed"
-						href="/rss.xml"
-					>
-						<Icon name="tabler:rss" class="w-5 h-5" />
-					</a>
-					<a
-						href="https://github.com/onwidget/astrowind"
-						class="inline-block text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5"
-						aria-label="Astrowind Github"
-					>
-						<Icon name="tabler:brand-github" class="w-5 h-5" />
-					</a>
+					<a href="#"> Link Extra</a>
 				</div>
 			</div>
 		</nav>
