--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import '~/assets/styles/base.scss';
+import '~/assets/styles/style.scss';
 import Scripts from '~/components/core/Scripts.astro';
 ---
 
