--- a/src/components/core/ButtonToggleMenu.astro
+++ b/src/components/core/ButtonToggleMenu.astro
@@ -2,8 +2,7 @@
 import { Icon } from 'astro-icon';
 const {
 	label = 'Toggle Menu',
-	class:
-		className = 'text-sw-primary dark:text-sw-secondary rounded-lg text-sm inline-flex items-center transition',
+	className = 'rounded-lg text-sm p-2.5 inline-flex items-center relative text-sw-primary dark:text-sw-secondary',
 	iconClass = 'w-6 h-6',
 	iconName = 'tabler:menu',
 } = Astro.props;
