--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -1,6 +1,6 @@
 ---
-import { AstroSeo } from "@astrolib/seo"
-import { GoogleAnalytics } from "@astrolib/analytics"
+import { AstroSeo } from "@astrolib/seo";
+import { GoogleAnalytics } from "@astrolib/analytics";
 import { getImage } from '@astrojs/image';
 
 import { getRelativeUrlByFilePath } from '~/utils/directories';
@@ -71,4 +71,3 @@ const image =
 {SITE.googleSiteVerificationId && <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />}
 
 <!-- Google Analytics -->
-{SITE.googleAnalyticsId && <GoogleAnalytics id={String(SITE.googleAnalyticsId)} partytown={true} />}
