--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -5,7 +5,7 @@ import Header from '~/components/widgets/Header.astro';
 
 <Layout>
 	<Header />
-	<main>
+	<main class="pt-4 px-4 lg:px-0">
 		<slot />
 	</main>
 </Layout>
