big black c... ube

--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -8,7 +8,7 @@ import ButtonToggleMenu from '~/components/core/ButtonToggleMenu.astro';
 	<div class="py-4 px-4 lg:px-0 mx-auto w-full md:flex md:justify-between max-w-6xl">
 		<div class="flex justify-between">
 			<a class="flex items-center">
-				<span class="self-center text-2xl font-extrabold text-gray-900 whitespace-nowrap dark:text-white"
+				<span class="self-center text-2xl font-extrabold text-sw-primary whitespace-nowrap dark:text-sw-secondary"
 					>spacewiz.dev</span
 				>
 			</a>
@@ -19,7 +19,7 @@ import ButtonToggleMenu from '~/components/core/ButtonToggleMenu.astro';
 		</div>
 
 		<nav
-			class="items-center w-full md:w-auto md:flex text-gray-600 dark:text-slate-200 h-screen md:h-auto"
+			class="items-center w-full md:w-auto md:flex text-sw-primary dark:text-slate-200 h-screen md:h-auto"
 			aria-label="Main navigation"
 			id="menu"
 		>
@@ -28,13 +28,13 @@ import ButtonToggleMenu from '~/components/core/ButtonToggleMenu.astro';
 			>
 				<li>
 					<a
-						class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
+						class="font-medium hover:text-sw-primary dark:hover:text-sw-secondary px-4 py-3 flex items-center transition duration-150 ease-in-out"
 						href="#">Início</a
 					>
 				</li>
 				<li>
 					<a
-						class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
+						class="font-medium hover:text-sw-primary dark:hover:text-sw-secondary px-4 py-3 flex items-center transition duration-150 ease-in-out"
 						href="#">Projetos</a
 					>
 				</li>
