--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@ import Layout from '~/layouts/PageLayout.astro';
 import { LoremIpsum } from 'lorem-ipsum';
 import { htmlColorNames } from '@astrojs/image/dist/loaders/colornames';
 
+import Hero from '~/components/widgets/Hero.astro';
+
 const meta = {
 	title: SITE.title,
 	description: SITE.description,
@@ -26,7 +28,8 @@ const lorem = new LoremIpsum(
 ---
 
 <Layout>
-	<div class="max-w-6xl mx-auto relative">
+	<Hero/>
+	<div class="max-w-6xl mx-auto pt-4 px-4 lg:px-0 relative">
 		<p class="text-5xl">
 			<span>Paragrafo no</span>
 			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">index</span>
@@ -35,10 +38,5 @@ const lorem = new LoremIpsum(
 		<div class="text-justify">
 			<span set:html={lorem.generateParagraphs(7)}></span>
 		</div>
-
-		<div id="canvas" class="absolute top-0 right-0"></div>
-		<script>
-			import '~/assets/js/myscript.ts';
-		</script>
 	</div>
 </Layout>
