--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -9,7 +9,7 @@ import DividerWave from '~/components/atoms/DividerWave.astro';
 {
 	(
 		<div>
-			<Image class="cover w-full" src={heroImage} alt="descriptive text" />
+			<Image class="cover w-full" src={heroImage} alt="" />
 			<div id="canvas" class="absolute top-0 right-0" />
 			<HeroModel/>
 			<DividerWave />
