--- a/src/components/atoms/HeroModel.astro
+++ b/src/components/atoms/HeroModel.astro
@@ -2,35 +2,35 @@
 ---
 
 <script>
-	import * as THREE from 'three';
-	window.onload = (e) => {
-		console.log('carregou modelo 3d');
+	// import * as THREE from 'three';
+	// window.onload = (e) => {
+	// 	console.log('carregou modelo 3d');
 
-		const scene = new THREE.Scene();
-		const camera = new THREE.PerspectiveCamera(45, 1, 1, 1000);
+	// 	const scene = new THREE.Scene();
+	// 	const camera = new THREE.PerspectiveCamera(45, 1, 1, 1000);
 
-		const renderer = new THREE.WebGLRenderer({ alpha: true });
-		renderer.setClearColor(0x000000, 0); // the default
-		renderer.setSize(1920, 1080);
-		document.getElementById('canvas').appendChild(renderer.domElement);
+	// 	const renderer = new THREE.WebGLRenderer({ alpha: true });
+	// 	renderer.setClearColor(0x000000, 0); // the default
+	// 	renderer.setSize(1920, 1080);
+	// 	document.getElementById('canvas').appendChild(renderer.domElement);
 
-		const geometry = new THREE.BoxGeometry(1, 1, 1);
-		const material = new THREE.MeshBasicMaterial({ color: 0x000000 });
-		const cube = new THREE.Mesh(geometry, material);
-		scene.add(cube);
+	// 	const geometry = new THREE.BoxGeometry(1, 1, 1);
+	// 	const material = new THREE.MeshBasicMaterial({ color: 0x000000 });
+	// 	const cube = new THREE.Mesh(geometry, material);
+	// 	scene.add(cube);
 
 
-		camera.position.z = 2.5;
+	// 	camera.position.z = 2.5;
 
-		function animate() {
-			requestAnimationFrame(animate);
+	// 	function animate() {
+	// 		requestAnimationFrame(animate);
 
-			cube.rotation.x += 0.01;
-			cube.rotation.y += 0.01;
+	// 		cube.rotation.x += 0.01;
+	// 		cube.rotation.y += 0.01;
 
-			renderer.render(scene, camera);
-		}
+	// 		renderer.render(scene, camera);
+	// 	}
 
-		animate();
-	};
+	// 	animate();
+	// };
 </script>
