--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,7 @@ const { meta = {} } = Astro.props;
 		<MetaTags {...meta} />
 	</head>
 
-	<body class="antialiased bg-sw-secondary dark:bg-sw-primary text-sw-primary dark:text-sw-secondary align-middle">
+	<body class="antialiased sw-bg-reverse sw-text align-middle">
 		<slot />
 		<Scripts />
 	</body>
