toggle com react

--- a/src/components/core/Scripts.astro
+++ b/src/components/core/Scripts.astro
@@ -39,9 +39,9 @@
 			localStorage.theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light';
 		});
 
-		attachEvent('[data-sw-btn-toggle-product]', 'click', function (elem) {
-			elem.classList.toggle('toggled');
-		});
+		// attachEvent('[data-sw-btn-toggle-product]', 'click', function (elem) {
+		// 	elem.classList.toggle('toggled');
+		// });
 	};
 
 	window.onpageshow = function () {
