--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -3,12 +3,12 @@ import ProductCard from '~/components/atoms/ProductCard.astro';
 ---
 
 <div class="flex flex-wrap gap-40 p-4 justify-center align-middle">
-	<ProductCard title="Games" subtitle="joguins" desc="jogões" />
+	<ProductCard title="Games" subtitle="joguins" description="jogões" />
 	<ProductCard
 		title="Sites"
 		subtitle="sites interativos"
-		desc="desenvolvimento de sites únicos com elementos interativos"
+		description="desenvolvimento de sites únicos com elementos interativos"
 	/>
-	<ProductCard title="Apps" subtitle="aplicativos" desc="é mentira" />
-	<ProductCard title="Sei lá" subtitle="bluberson" desc="blibliblibs" />
+	<ProductCard title="Apps" subtitle="aplicativos" description="é mentira" />
+	<ProductCard title="Sei lá" subtitle="bluberson" description="blibliblibs" />
 </div>
