--- a/src/components/atoms/ProductCard.astro
+++ b/src/components/atoms/ProductCard.astro
@@ -4,18 +4,23 @@ import { Image } from '@astrojs/image/components';
 import { Icon } from 'astro-icon';
 
 import defaultImageSrc from '~/assets/images/placeholder_128_8rem.png';
-import ButtonToggleProduct from '~/components/core/ButtonToggleProduct.astro';
+import ToggleCard from '~/components/atoms/ToggleCard';
 
-const { title, subtitle, desc, icon = defaultImageSrc} = Astro.props;
+export interface ProductCard {
+	iconSrc: string;
+	title: string;
+	subtitle: string;
+	description: string;
+}
+
+const { iconSrc = defaultImageSrc, title, subtitle, description } = Astro.props;
 ---
 
-<div class="card flex-grow: 1 w-96 relative overflow-visible sw-bg sw-text-reverse" >
-	<div class="absolute -mt-8 -mr-8 right-0">
-		<Image class="" src={icon} alt="" />
-	</div>
-	<div class="card-body">
-		<h2 class="card-title">{title}</h2>
-		<p>{subtitle}</p>
-		<ButtonToggleProduct/>
-	</div>
-</div>
+<ToggleCard className='card flex-grow: 1 w-96 relative overflow-visible sw-bg sw-text-reverse' client:load>
+	<Image slot='cardIcon' class='' src={iconSrc} alt='' />
+	<h2 slot='title' class='card-title'>{title}</h2>
+	<p slot='subtitle'>{subtitle}</p>
+	<p slot='description'>{description}</p>
+	<Icon slot='buttonIconPlus' name='akar-icons:plus' class='w-6 h-6' />
+	<Icon slot='buttonIconMinus' name='akar-icons:minus' class='w-6 h-6' />
+</ToggleCard>
