--- a/src/components/core/ButtonToggleTheme.astro
+++ b/src/components/core/ButtonToggleTheme.astro
@@ -6,7 +6,7 @@ const {
 	iconNameSun = 'akar-icons:sun-fill',
 	iconClassSun = 'w-6 h-6 transition duration-1000',
 	iconNameMoon = 'akar-icons:moon-fill',
-	iconClassMoon = 'w-6 h-6 absolute transition duration 1000'
+	iconClassMoon = 'w-6 h-6 absolute transition duration 1000',
 } = Astro.props;
 ---
 
