--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -1,10 +1,11 @@
 ---
-import { Icon } from 'astro-icon';
 import ButtonToggleTheme from '~/components/core/ButtonToggleTheme.astro';
 import ButtonToggleMenu from '~/components/core/ButtonToggleMenu.astro';
 ---
 
-<header class="sticky top-0 z-40 w-full flex-none mx-auto md:backdrop-blur-sm shadow-md bg-sw-secondary dark:bg-sw-primary">
+<header
+	class="sticky top-0 z-40 w-full flex-none mx-auto md:backdrop-blur-sm shadow-md bg-sw-secondary dark:bg-sw-primary"
+>
 	<div class="py-4 px-4 lg:px-0 mx-auto w-full md:flex md:justify-between max-w-6xl">
 		<div class="flex justify-between">
 			<a class="flex items-center">
