--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -3,12 +3,29 @@ import ProductCard from '~/components/atoms/ProductCard.astro';
 ---
 
 <div class="flex flex-wrap gap-40 p-4 justify-center align-middle">
-	<ProductCard title="Games" subtitle="joguins" description="jogões" />
 	<ProductCard
+		iconSrc="./src/assets/models/products/tools.fbx"
+		title="Games"
+		subtitle="jogos 2D e 3D"
+		description="desenvolvimento de jogos 2D e 3D em Unity Engine."
+	/>
+	<ProductCard
+		iconSrc="./src/assets/models/products/tools.fbx"
 		title="Sites"
 		subtitle="sites interativos"
-		description="desenvolvimento de sites únicos com elementos interativos"
+		description="desenvolvimento de sites únicos com elementos interativos."
 	/>
-	<ProductCard title="Apps" subtitle="aplicativos" description="é mentira" />
-	<ProductCard title="Sei lá" subtitle="bluberson" description="blibliblibs" />
+	<ProductCard
+		iconSrc="./src/assets/models/products/tools.fbx"
+		title="Apps"
+		subtitle="aplicativos"
+		description="é mentira"
+	/>
+	<ProductCard
+		iconSrc="./src/assets/models/products/tools.fbx"
+		iconSrc="./src/assets/models/products/tools.fbx"
+		title="Sei lá"
+		subtitle="bluberson"
+		description="blibliblibs"
+	/>
 </div>
