--- a/src/components/atoms/ProductCard.astro
+++ b/src/components/atoms/ProductCard.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon';
 
 import ToggleCard from '~/components/atoms/ToggleCard';
-import CardIconModel from './CardIconModel';
+import CardIconCanvas from './CardIconCanvas';
 
 export interface Props {
 	iconSrc: string;
@@ -15,7 +15,7 @@ const { iconSrc, title, subtitle, description } = Astro.props as Props;
 ---
 
 <ToggleCard client:load>
-	<CardIconModel fbxPath={iconSrc} slot="cardIcon" client:load />
+	<CardIconCanvas fbxPath={iconSrc} slot="cardIcon" client:load />
 	<h2 slot="title" class="card-title">{title}</h2>
 	<p slot="subtitle">{subtitle}</p>
 	<p slot="description">{description}</p>
