--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -6,8 +6,8 @@ import DividerWave from '~/components/atoms/DividerWave.astro';
 import HeroCanvas from '~/components/atoms/HeroCanvas';
 ---
 
-<div>
-	<Image class="cover w-full" src={heroImage} alt="" />
+<div class="w-[100vw] h-[100vh]">
+	<Image class="cover w-full w-[100%] h-[100%]" src={heroImage} alt="" />
 	<div class="absolute top-0 right-0 w-[100%] h-[100%]">
 		<HeroCanvas client:load />
 	</div>
