--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -6,7 +6,7 @@ import DividerWave from '~/components/atoms/DividerWave.astro';
 import HeroCanvas from '~/components/atoms/HeroCanvas';
 ---
 
-<div class="w-[100vw] h-[100vh]">
+<div class="h-[100vh] relative">
 	<Image class="cover w-full w-[100%] h-[100%]" src={heroImage} alt="" />
 	<div class="absolute top-0 right-0 w-[100%] h-[100%]">
 		<HeroCanvas client:load />
