--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -1,30 +1,42 @@
 ---
 import ProductCard from '~/components/atoms/ProductCard.astro';
+import DividerRect from '~/components/atoms/DividerRect.astro';
 ---
 
-<div class="flex flex-wrap gap-40 p-4 justify-center align-middle">
-	<ProductCard
-		iconSrc="./src/assets/models/products/tools.fbx"
-		title="Games"
-		subtitle="jogos 2D e 3D"
-		description="desenvolvimento de jogos 2D e 3D em Unity Engine."
-	/>
-	<ProductCard
-		iconSrc="./src/assets/models/products/tools.fbx"
-		title="Sites"
-		subtitle="sites interativos"
-		description="desenvolvimento de sites únicos com elementos interativos."
-	/>
-	<ProductCard
-		iconSrc="./src/assets/models/products/tools.fbx"
-		title="Apps"
-		subtitle="aplicativos"
-		description="é mentira"
-	/>
-	<ProductCard
-		iconSrc="./src/assets/models/products/tools.fbx"
-		title="Sei lá"
-		subtitle="bluberson"
-		description="blibliblibs"
-	/>
+<h1 class="text-5xl mb-6">
+	<span>O que</span>
+	<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">fazemos</span>
+</h1>
+
+<div class="mb-12">
+	<div class="flex flex-wrap gap-24 p-4 justify-center align-middle">
+		<ProductCard
+			iconSrc="./src/assets/models/products/tools.fbx"
+			title="Games"
+			subtitle="jogos 2D e 3D"
+			description="desenvolvimento de jogos 2D e 3D em Unity Engine."
+		/>
+		<ProductCard
+			iconSrc="./src/assets/models/products/tools.fbx"
+			title="Sites"
+			subtitle="sites interativos"
+			description="desenvolvimento de sites únicos com elementos interativos."
+		/>
+		<ProductCard
+			iconSrc="./src/assets/models/products/tools.fbx"
+			title="Apps"
+			subtitle="aplicativos"
+			description="é mentira"
+		/>
+		<ProductCard
+			iconSrc="./src/assets/models/products/tools.fbx"
+			title="Sei lá"
+			subtitle="bluberson"
+			description="blibliblibs"
+		/>
+	</div>
+
+	<div class="relative">
+		<DividerRect />
+	</div>
 </div>
