--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -11,25 +11,25 @@ import DividerRect from '~/components/atoms/DividerRect.astro';
 <div class="mb-12">
 	<div class="flex flex-wrap gap-24 p-4 justify-center align-middle">
 		<ProductCard
-			iconSrc="./src/assets/models/products/tools.fbx"
+			iconSrc="~/assets/models/products/tools.fbx"
 			title="Games"
 			subtitle="jogos 2D e 3D"
 			description="desenvolvimento de jogos 2D e 3D em Unity Engine."
 		/>
 		<ProductCard
-			iconSrc="./src/assets/models/products/tools.fbx"
+			iconSrc="~/assets/models/products/tools.fbx"
 			title="Sites"
 			subtitle="sites interativos"
 			description="desenvolvimento de sites únicos com elementos interativos."
 		/>
 		<ProductCard
-			iconSrc="./src/assets/models/products/tools.fbx"
+			iconSrc="~/assets/models/products/tools.fbx"
 			title="Apps"
 			subtitle="aplicativos"
 			description="é mentira"
 		/>
 		<ProductCard
-			iconSrc="./src/assets/models/products/tools.fbx"
+			iconSrc="~/assets/models/products/tools.fbx"
 			title="Sei lá"
 			subtitle="bluberson"
 			description="blibliblibs"
